@@ -42,6 +42,15 @@ Element.addMethods({
 });
 
 
+/**
+ * Array.sum()
+ */
+Array.prototype.sum = function(){
+	for(var i=0,sum=0;i<this.length;sum+=this[i++]){};
+	return sum;
+};
+
+
 
 Ajax.Response.addMethods({
 	/**
