@@ -2,6 +2,6 @@
 	<p id="{$name}-tab-{$tab.id}-label" class="label">
 		<span class="lt"><!-- --></span>
 		<span class="icon"><!-- icon --></span>
-		<span class="labeltext">{htmlencode(cropText($tab.label,22,false))}</span>
+		<span class="labeltext">{htmlencode $tab.label}</span>
 	</p>
 </li>
